# benchmark

./: .clang-format  .clang-tidy  .flake8  .gitignore  CMakeLists.txt  README.md  format-code
include/: bench.h  benchmarks.h
include/bench/: cpu.h  display.h  fileio.h  memory.h  timing.h
include/bench/benchmarks/: cpu.h  fileio.h  memory.h
src/: .clang-format  CMakeLists.txt  bench.cpp  benchmarks.cpp  main.cpp
src/bench/: cpu.cpp  display.cpp  fileio.cpp  memory.cpp  timing.cpp
src/bench/benchmarks/: cpu.cpp  fileio.cpp  memory.cpp
tests/: CMakeLists.txt  test_bench.cpp  test_stub.cpp
